安全的工厂方法,简单工厂模式

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>设计模式</title>
 </head>
 <body>
-
+<div id="container"></div>
+<script type="application/javascript" src="safefactory.js"></script>
 </body>
 </html>
